:hammer: chore: debugging setup
Signed-off-by: Zerohertz <ohg3417@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,16 +4,15 @@
 cmake_minimum_required(VERSION 3.20)
 
 option(USE_NVCC "Use NVCC instead of Clang++ for CUDA" OFF)
-option(ENABLE_CUDA_DEBUG "Enable CUDA debug mode" OFF)
+option(USE_DEBUG "Use CUDA debug mode" OFF)
 
 set(CMAKE_CXX_COMPILER "clang++")
 if(USE_NVCC)
   set(CMAKE_CUDA_COMPILER "nvcc")
   message(STATUS "Using NVCC compiler")
   set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -Wno-deprecated-gpu-targets")
-  if(ENABLE_CUDA_DEBUG)
+  if(USE_DEBUG)
     set(CMAKE_BUILD_TYPE "Debug")
-    message(STATUS "Clang++ debug mode enabled")
     set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -G")
     message(STATUS "NVCC debug mode enabled")
   else()
@@ -22,13 +21,14 @@ if(USE_NVCC)
 else()
   set(CMAKE_CUDA_COMPILER "clang++")
   message(STATUS "Using Clang++ compiler")
-  if(ENABLE_CUDA_DEBUG)
+  if(USE_DEBUG)
     set(CMAKE_BUILD_TYPE "Debug")
+    set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} --cuda-noopt-device-debug")
     message(STATUS "Clang++ debug mode enabled")
   endif()
 endif()
 
-project(cuda-gpu-programming-study LANGUAGES C CXX CUDA)
+project(cuda-by-example LANGUAGES C CXX CUDA)
 
 find_package(CUDAToolkit REQUIRED)
 find_package(OpenGL REQUIRED)
@@ -44,7 +44,7 @@ set(CMAKE_CUDA_STANDARD_REQUIRED ON)
 
 set(CMAKE_CUDA_ARCHITECTURES 90) # (75 80 86 87 89 90 100 110 120)
 
-include_directories(src/common)
+include_directories(src/include)
 file(GLOB_RECURSE ALL_CPP_SOURCES "src/*.cpp")
 foreach(cpp_source ${ALL_CPP_SOURCES})
   get_filename_component(executable_name ${cpp_source} NAME_WE)
