:recycle: refactor: book & lecture
Signed-off-by: Zerohertz <ohg3417@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,13 +45,31 @@ set(CMAKE_CUDA_STANDARD_REQUIRED ON)
 set(CMAKE_CUDA_ARCHITECTURES 90) # (75 80 86 87 89 90 100 110 120)
 
 include_directories(src/include)
+
 file(GLOB_RECURSE ALL_CPP_SOURCES "src/*.cpp")
 foreach(cpp_source ${ALL_CPP_SOURCES})
   get_filename_component(executable_name ${cpp_source} NAME_WE)
-  add_executable(${executable_name} ${cpp_source})
+  get_filename_component(source_dir ${cpp_source} DIRECTORY)
+  if(source_dir MATCHES "src/book/")
+    set(PREFIX "book_")
+  elseif(source_dir MATCHES "src/lecture/")
+    set(PREFIX "lecture_")
+  else()
+    set(PREFIX "")
+  endif()
+  add_executable(${PREFIX}${executable_name} ${cpp_source})
 endforeach()
+
 file(GLOB_RECURSE ALL_CU_SOURCES "src/*.cu")
 foreach(cu_source ${ALL_CU_SOURCES})
   get_filename_component(executable_name ${cu_source} NAME_WE)
-  add_executable(${executable_name} ${cu_source})
+  get_filename_component(source_dir ${cu_source} DIRECTORY)
+  if(source_dir MATCHES "src/book/")
+    set(PREFIX "book_")
+  elseif(source_dir MATCHES "src/lecture/")
+    set(PREFIX "lecture_")
+  else()
+    set(PREFIX "")
+  endif()
+  add_executable(${PREFIX}${executable_name} ${cu_source})
 endforeach()
